--- a/website/newsletter/244/index.mdx
+++ b/website/newsletter/244/index.mdx
@@ -1,14 +1,12 @@
 ---
 slug: /244
-title: "This Week In React #244: "
+title: "This Week In React #244: React Router, Compiler, Next.js, JSX, TanStack, Storybook | Reanimated, Hermes, Keyboard Controller, Screens, Node-API, Shimmer | TC39, tsgolint, Bun, Better-Auth, WebGPU"
 authors: [slorber]
 date: 07-23-2025
 unlisted: true
 ---
 
 Hi everyone!
-
-<Todo />
 
 <!-- truncate -->
 
@@ -57,14 +55,14 @@ Other useful links:
 
 **React Compiler getting ready for prime time?**
 
-Recently, the [React Compiler docs](https://react.dev/learn/react-compiler) have been completely rewritten, divided into several pages, and given a more prominent place on the React docs site. There’s also a new [API reference](https://react.dev/reference/react-compiler/configuration) section covering advanced configuration, directives and how to pre-compile a React library to optimize it before distribution.
+Recently, the [React Compiler docs](https://react.dev/learn/react-compiler) have been completely rewritten, divided into several pages, and given a more prominent place on the React docs site. There’s also a new [API reference](https://react.dev/reference/react-compiler/configuration) section covering configuration, directives, and pre-compiling a React library before distribution.
 
-The React Compiler is now recommended in other places of the docs as a [better alternative to `React.memo`](https://react.dev/reference/react/memo#react-compiler-memo), `useMemo,` and `useCallback`. In the future, [eslint-plugin-react-hooks may enable the compiler rules by default](https://github.com/facebook/react/pull/33509). It’s still a Release Candidate, but I wouldn’t be surprised to see it become stable at [React Conf](https://conf.react.dev/) in October, given the line-up.
+The React Compiler is now recommended in other places of the docs as a [better alternative to `React.memo`](https://react.dev/reference/react/memo#react-compiler-memo), `useMemo,` and `useCallback`. In the future, [eslint-plugin-react-hooks may enable the compiler rules by default](https://github.com/facebook/react/pull/33509). It’s still a Release Candidate, but I wouldn’t be surprised to see it become stable soon, probably at [React Conf](https://conf.react.dev/) in October given the line-up.
 
 ---
 
 - 💸 [Product for Engineers - Job interview questions engineers should ask (but don't)](https://go.posthog.com/twir-jul23)
-- 👀 [Remix v3 branch](https://github.com/remix-run/remix/tree/v3): Gives you a sneak peek of support packages that will probably be part of the upcoming Remix v3 framework (based on Preact), packages that were previously created on a [remix-the-web repo](https://github.com/mjackson/remix-the-web). We can notice for example that Remix v3 will have a more powerful [URL matching system](https://github.com/remix-run/remix/tree/v3/packages/route-pattern).
+- 👀 [Remix v3 branch](https://github.com/remix-run/remix/tree/v3): A sneak peek of support packages that will probably be part of Remix v3 framework (based on Preact), packages that were previously on a [remix-the-web repo](https://github.com/mjackson/remix-the-web). Remix v3 should have a more powerful [URL matching system](https://github.com/remix-run/remix/tree/v3/packages/route-pattern) than React Router.
 - 🐦 [Next.js 15.4 \- `devtoolSegmentExplorer` demo](https://x.com/asidorenko_/status/1946228504112067050): New convenient experimental DX feature coming with the latest release.
 - 🐦 [Next.js 15.4 \- Forwarding browser logs to terminal](https://x.com/asidorenko_/status/1947304774249959470): The new feature `browserDebugInfoInTerminal` experimental feature is useful for DX, but also coding agents that can more easily see and fix client-side errors.
 - 🐦 [TIL you can pass JSX elements as props without curly braces](https://x.com/sebastienlorber/status/1947289335662883188): Yep, `<div prop=<span>Hello</span></div>` is legal\!
@@ -81,7 +79,6 @@ The React Compiler is now recommended in other places of the docs as a [better a
 - 📦 [oxlint 1.8 \- Auto-fixer for react/exhaustive-deps](https://github.com/oxc-project/oxc/releases/tag/oxlint_v1.8.0)
 - 📦 [Astro 5.12 \- TOML support for content loaders, new Netlify DX, raw env values](https://astro.build/blog/astro-5120/)
 - 📦 [Reason-React 0.16 \- Support for React 19, expose React resource preloading APIs](https://github.com/reasonml/reason-react/releases/tag/0.16.0)
-- 📦 [React Admin 5.10](https://github.com/marmelab/react-admin/releases/tag/v5.10.0)
 - 🎥 [Wawa Sensei \- How to Create a Lenticular Material with TSL and WebGPU](https://www.youtube.com/watch?v=U4OjVL5NE3A)
 - 🎥 [Alem Tuzlak \- The best guide to rolling your own auth with react-router\!](https://www.youtube.com/watch?v=Qv_8j5PKPI4)
 
@@ -116,9 +113,9 @@ This is a massive release that greatly improves the Reanimated. Highlights inclu
 
 - CSS Transitions and Animations: taking the best part of CSS animations a bringing it to React Native through a familiar and convenient declarative API, that improves performance and web/mobile cross-platform support along the way. It should be particularly useful for state-driven micro-interactions, but worklets aren’t going anywhere and remain the go-to choice for complex and gesture/scroll-driven animations.
 - Worklets have been extracted to a separate library that Reanimated depends on, starting \>= v3.17. Richer multi-threading APIs should come soon, with the ability to move heavy computation, data fetching/processing to a background thread, with the ability to use third-party libraries in worklets.
-- Reanimated has been split into many modular packages to help reduce bundle size
-- Shared Element Transitions coming in an upcoming v4.x version
-- Reanimated v4 is only compatible with the New Architecture
+- Reanimated has been split into many modular packages to help reduce bundle size, particularly useful on the web.
+- Shared Element Transitions coming in an upcoming v4.x version.
+- Reanimated v4 is not only compatible with the New Architecture.
 
 ---
 
