--- a/website/newsletter/244/index.mdx
+++ b/website/newsletter/244/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /244
-title: "This Week In React #244: React Router, Compiler, Next.js, JSX, TanStack, Storybook | Reanimated, Hermes, Keyboard Controller, Screens, Node-API, Shimmer | TC39, tsgolint, Bun, Better-Auth, WebGPU"
+title: "This Week In React #244: React Router, Compiler, Next.js, TanStack, JSX, Storybook | Reanimated, Hermes, Keyboard Controller, Screens, Node-API, Shimmer | TC39, tsgolint, Bun, Better-Auth, WebGPU"
 authors: [slorber]
 date: 07-23-2025
 ---
