--- a/website/newsletter/244/index.mdx
+++ b/website/newsletter/244/index.mdx
@@ -140,7 +140,7 @@ This is a massive release that greatly improves the Reanimated. Highlights inclu
 - 📜 [Build and Run Node-API Modules in React Native](https://www.callstack.com/blog/build-and-run-node-api-modules-in-react-native)
 - 📦 [Keyboard Controller 1.18 \- Keyboard extensions or new way to interact with keyboard](https://kirillzyusko.github.io/react-native-keyboard-controller/blog/keyboard-extensions): This release brings significant improvements, letting you render custom UI elements that live within or alongside the keyboard area. It also fixes the iOS lag issue with keyboard preloading.
 - 📦 [Screens 4.13 \- Native tabs](https://github.com/software-mansion/react-native-screens/releases/tag/4.13.0): This is finally coming, native bottom tabs for Android and iOS (including iOS 26 liquid glass tabs) for both Legacy/New Arch\!
-- 📦 [Private Mind](https://github.com/software-mansion-labs/private-mind): Software Mansion is introducing an app to chat with local LLM models. An alternative to the ChatGPT app with no privacy concerns. It’s also open-source and based on React Native ExecuTorch.
+- 📦 [Private Mind](https://github.com/software-mansion-labs/private-mind): SWM introducing an app to chat with local LLM models, a good alternative to ChatGPT with no privacy concerns. Open-source and based on React Native ExecuTorch.
 - 📦 [React Native Fast Shimmer \- Lightweight, performant, customizable library for creating elegant loading skeletons](https://www.callstack.com/blog/performant-and-cross-platform-shimmers-in-react-native-apps)
 - 📦 [Gesture Handler 2.27.2 \- Various bugfixes and improvements](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.27.2)
 - 📦 [Reanimated 3.19 \- Support for RN 0.81, many bugfixes](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.19.0)
