fix copy in 244

--- a/website/newsletter/244/index.mdx
+++ b/website/newsletter/244/index.mdx
@@ -120,9 +120,9 @@ This is a massive release that greatly improves the Reanimated. Highlights inclu
 
 - CSS Transitions and Animations: taking the best part of CSS animations a bringing it to React Native through a familiar and convenient declarative API, that improves performance and web/mobile cross-platform support along the way. It should be particularly useful for state-driven micro-interactions, but worklets aren’t going anywhere and remain the go-to choice for complex and gesture/scroll-driven animations.
 - Worklets have been extracted to a separate library that Reanimated depends on, starting \>= v3.17. Richer multi-threading APIs should come soon, with the ability to move heavy computation, data fetching/processing to a background thread, with the ability to use third-party libraries in worklets.
-- Reanimated has been split into many modular packages to help reduce bundle size, particularly useful on the web.
+- Reanimated will be split into many modular packages to help reduce bundle size, particularly useful on the web.
 - Shared Element Transitions coming in an upcoming v4.x version.
-- Reanimated v4 is not compatible with the New Architecture.
+- Reanimated v4 is only compatible with the New Architecture.
 
 ---
 
