--- a/website/newsletter/245/index.mdx
+++ b/website/newsletter/245/index.mdx
@@ -44,7 +44,9 @@ TL;DR:
 
 ## ⚛️ React {#react}
 
-[Stop Re-Rendering — TanStack DB, the Embedded Client Database for TanStack Query](https://tanstack.com/blog/tanstack-db-0.1-the-embedded-client-database-for-tanstack-query)
+[![Stop Re-Rendering — TanStack DB, the Embedded Client Database for TanStack Query](/emails/issues/245/tanstack.jpg)](https://tanstack.com/blog/tanstack-db-0.1-the-embedded-client-database-for-tanstack-query)
+
+**[Stop Re-Rendering — TanStack DB, the Embedded Client Database for TanStack Query](https://tanstack.com/blog/tanstack-db-0.1-the-embedded-client-database-for-tanstack-query)**
 
 TanStack DB 0.1 is out in beta, 🐦 [completing the vision Tanner Linsley had for React Quey from day 1](https://x.com/tannerlinsley/status/1950262878852043103). Unlike Query, which treats data as isolated cache entries, DB provides the missing reactive layer and lets you create relationships between collections, using differential dataflow — a technique that only recomputes the parts of queries that actually changed. TanStack DB was designed from the ground up to support sync engines, but it is incrementally adoptable and compatible with REST, GraphQL or anything else.
 
@@ -95,7 +97,9 @@ Learn more, including how to get started free, at [embrace.io](https://embrace.i
 
 ## 📱 React-Native {#react-native}
 
-[Precompiled React Native for iOS: Faster builds are coming in 0.81](https://expo.dev/blog/precompiled-react-native-for-ios)
+[![Precompiled React Native for iOS: Faster builds are coming in 0.81](/emails/issues/245/precompiled.jpg)](https://expo.dev/blog/precompiled-react-native-for-ios)
+
+**[Precompiled React Native for iOS: Faster builds are coming in 0.81](https://expo.dev/blog/precompiled-react-native-for-ios)**
 
 iOS React Native builds are about to become much faster. With 0.81, it will be possible to use precompiled versions of React Native and its dependencies, similarly to what is already done on Android. For now, it’s behind an opt-in flag in 0.81. But Expo 54, at the end of August, will use precompiled versions by default.
 
