--- a/website/newsletter/246/index.mdx
+++ b/website/newsletter/246/index.mdx
@@ -92,12 +92,9 @@ React Native version 0.81 introduces support for the new Android 16, which enfor
 ---
 
 - 👀 [React Native Core PR \- Remove possibility to newArchEnabled=false in 0.82](https://github.com/facebook/react-native/pull/53025): Starting from React Native 0.82 you won’t be able to revert back to the Legacy Architecture anymore. If you want to keep getting support and new features in React Native this is the last time to migrate.  
-- 👀 William Candillon works on [realtime Skia effects for native views](https://github.com/Shopify/react-native-skia/pull/3282).  
 - 👀 [Expo SDK 54 beta is now available](https://expo.dev/changelog/sdk-54-beta).  
 - 📣 [React Native Enterprise Framework is now Rock](https://www.callstack.com/blog/react-native-enterprise-framework-is-now-rock): A solid rename of the Callstack’s framework. aiming to capture the enterprise part of the `@react-native-community\cli` users.  
-- 💬 [Precompiled binary for React Native Core](https://github.com/react-native-community/discussions-and-proposals/discussions/923)  
 - 📖 [Using patch-project \- Expo docs](https://docs.expo.dev/config-plugins/patch-project/): An experimental tool that preserves custom changes made to the `android` and `ios` folders supporting Continues Native Generation. Think of it like a CNG-friendly patch-package. Now with proper documentation.  
-- 🐦 [Support for PlatformColor, DynamicColorIOS & CSS custom properties is coming to React Navigation's theming system](https://x.com/reactnavigation/status/1955382933528908127).  
 - 🐦 [`rozenite-preview`](https://github.com/matinzd/rozenite-preview): A React Native DevTools plugin that allows you to preview isolated components ([demo](https://x.com/matinzd/status/1950300526748565953)).  
 - 📜 [Perfetto to analyze app start performance in React Native android apps](https://andrei-calazans.com/posts/analyzing-app-start-android-systrace/).  
 - 📜 [Running Multiple Instances of React Native in Sandbox](https://www.callstack.com/blog/running-multiple-instances-of-react-native-in-sandbox): A demo of a new `react-native-sandbox` library for running fully isolated React Native instances within a single application. Only iOS at the moment.  
@@ -111,12 +108,11 @@ React Native version 0.81 introduces support for the new Android 16, which enfor
 - 📦 [Gesture Handler 2.28 \- RN 0.81 Support, `gestureHandlerRootHOC` deprecation, bug fixes](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.28.0)  
 - 📦 [Audio Api 0.7 \- microphone input, custom C++ Processor Node, AudioBufferQueueSourceNode](https://github.com/software-mansion/react-native-audio-api/releases/tag/0.7.0)  
 - 📦 [React Native Testing Library 13.3 \- React Suspense support (`renderAsync`), `renderHookAsync`](https://github.com/callstack/react-native-testing-library/releases/tag/v13.3.0%20)  
-- 📦 [React Native Skia 2.2 \- support for non p3 colors on iOS](https://github.com/Shopify/react-native-skia/releases/tag/v2.2.0)  
+- 📦 [React Native Skia 2.2 \- support for non-p3 colors on iOS](https://github.com/Shopify/react-native-skia/releases/tag/v2.2.0)  
 - 📦 [`react-native-screen-transitions` 2.0 \- new API and animations customisation](https://github.com/eds2002/react-native-screen-transitions/releases/tag/react-native-screen-transitions%402.0.2)  
 - 📦 [`react-native-nitro-screen-recorder` \- the new library powered by Nitro Modules](https://github.com/ChristopherGabba/react-native-nitro-screen-recorder)  
-- 📦 [Nitro Images \- stable release](https://github.com/mrousavy/react-native-nitro-image/releases/tag/v0.5.0)  
+- 📦 [Nitro Images 0.5 \- First stable release](https://github.com/mrousavy/react-native-nitro-image/releases/tag/v0.5.0)  
 - 📦 [Nitro Modules \- RN 0.81 support, stability improvements](https://github.com/mrousavy/nitro/releases/tag/v0.28.0)  
-- 📦 [ElevenLabs React Native SDK](https://elevenlabs.io/docs/conversational-ai/libraries/react-native)  
 - 🎥 [Expo \- When to use over the air updates](https://youtu.be/PMRekmaeb1o?si=Defo5WOkURpV9hz1)  
 - 🎥 [Simon Grimm \- 5 React Native Mistakes Web Devs Keep Making](https://www.youtube.com/watch?v=rBpz7lCjBI8)   
 - 🎙️ [Rocket Ship 77 \+ 78 \- FlashList v2, Future of React Native Animations, End of the Old Arch, Better Performance](https://podcast.galaxies.dev/)  
